--- a/audio.html
+++ b/audio.html
@@ -5,16 +5,9 @@
     </head>
 
     <body> 
-        <p> Fur Elise </p>
+        <p> thothage </p>
         <audio controls> 
-            <source src="audio/furelise.wav">
-        </audio>
-
-        <br> <br> 
-
-        <p> Joti </p>
-        <audio controls> 
-            <source src="audio/joti.mp3">
+            <source src="thothage.mp3">
         </audio>
     </body>
 </html>
