--- a/audio.html
+++ b/audio.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html> 
     <head> 
-        <title> Audio Player </title>
+        <title> Thothage </title>
     </head>
 
-    <body> 
-        <p> thothage </p>
+    <body text> 
         <audio controls> 
-            <source src="thothage.mp3">
+            <source src="thothage.mp3" alt="thothage">
         </audio>
     </body>
 </html>
