--- a/audio.html
+++ b/audio.html
@@ -5,6 +5,10 @@
     </head>
 
     <body text> 
+        <img src="jake.JPG"
+             alt="Yim"
+             height ="800" width ="800"> 
+            
         <audio controls> 
             <source src="thothage.mp3" alt="thothage">
         </audio>
