Update and rename audio.html to thothage.html

--- a/thothage.html
+++ b/thothage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
     <head> 
-        <title> Thothage </title>
+        <title> thothage </title>
     </head>
 
     <body text> 
@@ -10,7 +10,7 @@
              height ="800" width ="800"> 
             
         <audio controls> 
-            <source src="thothage.mp3" alt="thothage">
+            <source src="thothage.mp3" alt="thothage" text-align="centre">
         </audio>
     </body>
 </html>
